--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-* {
+@import url(./fons.css);
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  a {
+ } a {
     text-decoration: none;
   }
   ul {
     list-style: none;
   }
-}
-.header {
-}
 .container {
   max-width: 1170px;
   width: 100%;
@@ -23,9 +18,7 @@
 .swiper-slide {
   background: #000;
 }
-.nav {
-  margin: 15px 0;
-}
+
 .nav_box {
   display: flex;
   justify-content: space-between;
@@ -34,7 +27,7 @@
   gap: 16px 0;
 }
 .nav_logo {
-  font-family: Inter;
+  font-family: var(--i700);
   font-size: 24px;
   font-weight: 700;
   line-height: 24px;
@@ -50,6 +43,7 @@
 .nav_link {
   color: #000;
   text-wrap: nowrap;
+  font-family: var(--p400);
 }
 .nav_link:hover {
   border-bottom: 1px solid #fff;
@@ -60,12 +54,14 @@
 .limk {
   width: 217px;
   border-right: 1px solid #000;
-  padding: 1px;
+  padding-top: 40px;
 }
 .links{
 color: #000;
+font-family: var(--p400);
 }
 .input {
+  font-family: var(--p400);
   font-size: 16px;
   font-weight: 400;
   line-height: 18.96px;
@@ -74,34 +70,24 @@ color: #000;
   outline: none;
   background: #f5f5f5;
 }
-
 .limk {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 .swiper-wrapper{
-  margin: 0 0 0 16px;
+  margin: 40px 16px;
 }
-.swiper :root {
-  --primary: #fff;
-  --primary1: #363738;
-  --secondary: #f5f5f5;
-  --secondary1: #fefaf1;
-  --bg: #fff;
-  --text: #fafafa;
-  --text1: #7d8184;
-  --text2: #000;
-  --button: #000;
-  --secondary-2: #db4444;
-  --button1: #0f6;
-  --button2: #db4444;
-  --hover-button: #e07575;
-  --hover-button: #a0bce0;
-}
+
 :root {
-  --font-family: "Poppins", sans-serif;
-  --second-family: "Inter", sans-serif;
+  --i400:"Inter-Regular";
+  --i500:"Inter-Medium";
+  --i600:"Inter-SemiBold";
+  --i700:"Inter-Bold";
+  --p400:"Poppins-Regular";
+  --p500:"Poppins-Medium";
+  --p600:"Poppins-SemiBold";
+
 }
 .logo {
   font-family: Inter;
@@ -117,7 +103,7 @@ color: #000;
   outline: none;
   align-items: center;
   padding: 7px 12px 7px 20px;
-  gap: 34px 10px;
+  gap: 10px 34px ;
   border-radius: 4px;
 }
 .mySwiper{
@@ -127,7 +113,7 @@ color: #000;
   display: flex;
   gap: 24px;
   justify-content: space-between;
-  margin-bottom: 16px;
+  margin: 16px 0;
 }
 .imags {
   display: flex;
@@ -150,7 +136,6 @@ color: #000;
 .dir {
   display: flex;
   justify-content: start;
-  margin-top: 40px;
 }
 .swiper-slide {
   height: 344px !important;
